Cambios de texto

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Plato Bootstrap Template</title>
+  <title>Uninet</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -49,30 +49,13 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
+          <li><a href="#hero" class="active">Inicio</a></li>
+          <li><a href="#about">Nosotros</a></li>
+          <li><a href="#services">Servicios</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li><a href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#pricing">Precios</a></li>
+          <li><a href="#team">Equipo</a></li>
+          <li><a href="#contact">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -90,9 +73,9 @@
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h2>Start your new digital experience with Plato</h2>
-            <p>We are team of talented designers making websites with Bootstrap</p>
-            <a href="#about" class="btn-get-started">Get Started</a>
+            <h2>Impieza tu expericia con Uninet Perú</h2>
+            <p>Importador N°1 en Perú  de insumos, componentes y fotocopiadoras.</p>
+            <a href="#about" class="btn-get-started">Empezar</a>
           </div>
         </div>
       </div>
@@ -105,33 +88,36 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <span class="description-title">About</span>
-        <h2>About</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Conocenos</h2>
+        <p>Soluciones de impresión que combinan innovación global con servicio personalizado.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
 
         <div class="row gy-4">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3>Voluptatem dignissimos provident laboris nisi ut aliquip ex ea commodo</h3>
+            <h3>Tecnología mundial, servicio local</h3>
             <img src="assets/img/about.jpg" class="img-fluid rounded-4 mb-4" alt="">
-            <p>Ut fugiat ut sunt quia veniam. Voluptate perferendis perspiciatis quod nisi et. Placeat debitis quia recusandae odit et consequatur voluptatem. Dignissimos pariatur consectetur fugiat voluptas ea.</p>
-            <p>Temporibus nihil enim deserunt sed ea. Provident sit expedita aut cupiditate nihil vitae quo officia vel. Blanditiis eligendi possimus et in cum. Quidem eos ut sint rem veniam qui. Ut ut repellendus nobis tempore doloribus debitis explicabo similique sit. Accusantium sed ut omnis beatae neque deleniti repellendus.</p>
+            <p>UNINET es un fabricante mundial de equipos originales (OEM) con más de 25 años de experiencia en la industria de la imagen. Con presencia en todos los continentes, nos hemos ganado una reputación global por la calidad de nuestros productos y nuestro enfoque centrado en el cliente.
+              </p>
+            <p>A través de Uninet Outsourcing Perú, llevamos esta experiencia al siguiente nivel, ofreciendo a empresas peruanas un modelo de suscripción inteligente de impresión, completamente gestionado, flexible y eficiente.</p>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="250">
             <div class="content ps-0 ps-lg-5">
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+                ¿Qué nos hace diferentes?
               </p>
               <ul>
-                <li><i class="bi bi-check-circle-fill"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                <li><i class="bi bi-check-circle-fill"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                <li><i class="bi bi-check-circle-fill"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
+                <li><i class="bi bi-check-circle-fill"></i> <span><strong>Fabricación original (OEM):</strong> Tecnología propia y certificada, no solo distribuimos, fabricamos.</span></li>
+                <li><i class="bi bi-check-circle-fill"></i> <span><strong>Plataforma global + atención local:</strong> Toda la potencia de una marca internacional con soporte personalizado en cada sede de tu empresa.</span></li>
+                <li><i class="bi bi-check-circle-fill"></i> <span><strong>Tecnologías transformadoras y sostenibles:</strong> Equipos con bajo impacto ambiental, certificados por el Ministerio del Ambiente.</span></li>
+                <li><i class="bi bi-check-circle-fill"></i> <span><strong>Planes tipo Netflix:</strong> Todo incluido. Imprime, escanea y copia sin preocuparte por tóner, repuestos o técnicos.</span></li>
+                <li><i class="bi bi-check-circle-fill"></i> <span><strong>Infraestructura propia:</strong> Red de técnicos certificados, repuestos importados y servicio inmediato.</span></li>
               </ul>
               <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
+                <strong>Nuestro compromiso.</strong>
+                Somos una empresa impulsada por la tecnología, inspirada por la invención y comprometida con la reinvención de soluciones que eliminan barreras operativas en el día a día de nuestros clientes.
+                Nuestra meta es desbloquear nuevas oportunidades para las empresas, optimizando sus procesos documentales sin afectar el medio ambiente ni el presupuesto.
               </p>
 
               <div class="position-relative mt-4">
