--- a/index.html
+++ b/index.html
@@ -702,11 +702,11 @@
               <h3>PLAN MAX</h3>
               <h4><sup>$</sup>90<span> / month</span></h4>
               <ul>
-                <li><i class="bi bi-check"></i> <span>Quam adipiscing vitae proin</span></li>
-                <li><i class="bi bi-check"></i> <span>Nec feugiat nisl pretium</span></li>
-                <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
-                <li><i class="bi bi-check"></i> <span>Pharetra massa massa ultricies</span></li>
-                <li><i class="bi bi-check"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+                <li><i class="bi bi-check"></i> <span>Cobertura nacional completa</span></li>
+                <li><i class="bi bi-check"></i> <span>Kit de emergencia por sede</span></li>
+                <li><i class="bi bi-check"></i> <span>Software de gestión profesional incluido</span></li>
+                <li><i class="bi bi-check"></i> <span>Soporte técnico escalado</span></li>
+                <li><i class="bi bi-check"></i> <span>Modular y personalizable</span></li>
               </ul>
               <div class="text-center"><a href="#" class="buy-btn">Comprar</a></div>
             </div>
