--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li><a href="#about">Nosotros</a></li>
           <li><a href="#services">Servicios</a></li>
           <li><a href="#portfolio">Portfalio</a></li>
-          <li><a href="#pricing">Precios</a></li>
+          <li><a href="#pricing">Planes</a></li>
           <li><a href="#team">Equipo</a></li>
           <li><a href="#contact">Contacto</a></li>
         </ul>
@@ -72,7 +72,7 @@
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h2>Impieza tu expericia con Uninet Perú</h2>
+            <h2>Empieza tu expericia con Uninet Perú</h2>
             <p>Importador N°1 en Perú  de insumos, componentes y fotocopiadoras.</p>
             <a href="#about" class="btn-get-started">Empezar</a>
           </div>
@@ -86,7 +86,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span class="description-title">About</span>
+        <span class="description-title">Conocenos</span>
         <h2>Conocenos</h2>
         <p>Soluciones de impresión que combinan innovación global con servicio personalizado.</p>
       </div><!-- End Section Title -->
@@ -260,7 +260,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span class="description-title">Services</span>
+        <span class="description-title">Servicios</span>
         <h2>Servicios</h2>
         <p>Soluciones integrales para impresión documental, gráfica y suministro de insumos</p>
       </div><!-- End Section Title -->
@@ -566,7 +566,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span class="description-title">Equipo</span>
+        <span class="description-title">Equipo de Ventas</span>
         <h2>Equipo de Ventas</h2>
         <p>Un grupo de asesores especializados listos para entender tus necesidades, brindarte la mejor solución en impresión y acompañarte en todo el proceso, desde la cotización hasta la postventa.</p>
       </div><!-- End Section Title -->
@@ -658,7 +658,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span class="description-title">Pricing</span>
+        <span class="description-title">Planes</span>
         <h2>Planes</h2>
         <p>Pensado para empresas que buscan simplificar su gestión de impresión. Incluyen el alquiler de equipos multifunción, tóner, mantenimiento técnico y soporte especializado, todo en un solo pago mensual y sin sorpresas.</p>
       </div><!-- End Section Title -->
@@ -673,8 +673,8 @@
               <h4><sup>$</sup>50<span> / month</span></h4>
               <ul>
                 <li><i class="bi bi-check"></i> <span>Cobertura nacional completa</span></li>
-                <li><i class="bi bi-check"></i> <span>Kit de emergencia por sede</span></li>
-                <li><i class="bi bi-check"></i> <span>Software de gestión profesional incluido</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Kit de emergencia por sede</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Software de gestión profesional incluido</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Soporte técnico escalado</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Modular y personalizable</span></li>
               </ul>
@@ -705,8 +705,8 @@
                 <li><i class="bi bi-check"></i> <span>Cobertura nacional completa</span></li>
                 <li><i class="bi bi-check"></i> <span>Kit de emergencia por sede</span></li>
                 <li><i class="bi bi-check"></i> <span>Software de gestión profesional incluido</span></li>
-                <li><i class="bi bi-check"></i> <span>Soporte técnico escalado</span></li>
-                <li><i class="bi bi-check"></i> <span>Modular y personalizable</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Soporte técnico escalado</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Modular y personalizable</span></li>
               </ul>
               <div class="text-center"><a href="#" class="buy-btn">Comprar</a></div>
             </div>
